--- a/Nak/home.html
+++ b/Nak/home.html
@@ -70,7 +70,7 @@ body {
         <h2><center><b/>OUR PLEDGE TO YOU </center><i class="fa fa-check-circle-o" aria-hidden="true"></i></h2>
         <ul>
           <li>Coordinate with your event team and staff to ensure delivery of your vision.</li>
-          <li>Keep everyone updated on what is happening at the event.</uli>
+          <li>Keep everyone updated on what is happening at the event.</li>
           <li>Keep the event timely and free-flowing.</li>
           <li>Create a fun and energetic atmosphere, keeping audience engaged.</li>
           <li>Make sure guests feel respected and accommodated.</li>
@@ -78,9 +78,11 @@ body {
           </ul>
     </section>
     <footer>
-<div style="text-align: center;">
+<div style="text-align: center;">
+
         <p> Copyright 2018 :: <a href="https://www.linkedin.com/in/martin-defor/" style="text-decoration: none"  none" target="blank"> Defor</a></p>
-</div>
+</div>
+
     </footer>
 </div>
 
