--- a/nak/nak.html
+++ b/nak/nak.html
@@ -60,7 +60,7 @@ body {
      <header>  
 <h1>        </h1>
         <img src="https://imgur.com/avgBI2V.jpg">
-        <p><b/>If you thought planning an event was hard, try keeping your guests off of their phones and engaged throughout the event! How exhausting, right? Well, leave it to us.</p> 
+        <p>If you thought planning an event was hard, try keeping your guests off of their phones and engaged throughout the event! How exhausting, right? Well, leave it to us.</p> 
         <p>Mc Nak Master of Ceremonies is an award winning event hosting company located in Accra, Ghana.<br/>
          Mc Nak Master of Ceremonies is a one of a kind Master of Ceremony Service. We provide events with excellent day of coordination & facilitation, executing your event with style and grace.</p>
         <p>Our commitment to excellence is crucial to achieving successful outcomes. We strive to ensure your event goals are met well beyond your expectations. We offer a versatile and high-quality service that caters to the needs of all individuals involved. We work to make your event stand out.</p>
