--- a/nak/nak.html
+++ b/nak/nak.html
@@ -67,10 +67,10 @@ body {
     </header>
     
     <section id="OUR PLEDGE TO YOU">
-        <h2><center><b/>OUR PLEDGE TO YOU </center><i class="fa fa-check-circle-o" aria-hidden="true"></i></h2>
+        <h2><center>OUR PLEDGE TO YOU </center><i class="fa fa-check-circle-o" aria-hidden="true"></i></h2>
         <ul>
           <li>Coordinate with your event team and staff to ensure delivery of your vision.</li>
-          <li>Keep everyone updated on what is happening at the event.</uli>
+          <li>Keep everyone updated on what is happening at the event.</li>
           <li>Keep the event timely and free-flowing.</li>
           <li>Create a fun and energetic atmosphere, keeping audience engaged.</li>
           <li>Make sure guests feel respected and accommodated.</li>
