--- a/nak/nak.html
+++ b/nak/nak.html
@@ -80,7 +80,7 @@ body {
     <footer>
 <div style="text-align: center;">
 
-        <p> Copyright 2018 :: <a href="https://www.linkedin.com/in/martin-defor/" style="text-decoration: none"  none" target="blank"> Defor</a></p>
+        <p> Copyright 2018 :: <a href="https://www.linkedin.com/in/martin-defor/" style="text-decoration: none"  none target="blank"> Defor</a></p>
 </div>
 
     </footer>
