--- a/nak/nak.html
+++ b/nak/nak.html
@@ -67,7 +67,7 @@ body {
     </header>
     
     <section id="OUR PLEDGE TO YOU">
-        <h2><center><b/>OUR PLEDGE TO YOU </center><i class="fa fa-check-circle-o" aria-hidden="true"></i></h2>
+        <h2><center><b>OUR PLEDGE TO YOU </center><i class="fa fa-check-circle-o" aria-hidden="true"></i></h2>
         <ul>
           <li>Coordinate with your event team and staff to ensure delivery of your vision.</li>
           <li>Keep everyone updated on what is happening at the event.</li>
