--- a/nak/contact.html
+++ b/nak/contact.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -47,10 +48,10 @@ body {
 <!-- Navigation -->
 
 <div class="topnav">
-  <a class="active" href="#Home">Home</a>
-  <a href="#Our service">Our service</a>
-  <a href="#Contact us">Contact</a>
-  <a href="#About">About</a>
+  <a href="index.html">Home</a>
+  <a href="service.html">Our service</a>
+  <a class="active" href="Contact.html">Contact</a>
+  <a href="about us.html">About</a>
 
 </div>
 
@@ -59,7 +60,7 @@ body {
 </div>
      <header>  
 <h1>        </h1>
-        <img src="https://imgur.com/avgBI2V.jpg">
+        <img src="https://imgur.com/AKdnjQT.jpg">
         <p>If you thought planning an event was hard, try keeping your guests off of their phones and engaged throughout the event! How exhausting, right? Well, leave it to us.</p> 
         <p>Mc Nak Master of Ceremonies is an award winning event hosting company located in Accra, Ghana.<br/>
          Mc Nak Master of Ceremonies is a one of a kind Master of Ceremony Service. We provide events with excellent day of coordination & facilitation, executing your event with style and grace.</p>
