--- a/nak/contact.html
+++ b/nak/contact.html
@@ -50,7 +50,7 @@ body {
 <div class="topnav">
   <a href="index.html">Home</a>
   <a href="service.html">Our service</a>
-  <a class="active" href="Contact.html">Contact</a>
+  <a class="active" href="contact.html">Contact</a>
   <a href="about us.html">About</a>
 
 </div>
