--- a/nak/service.html
+++ b/nak/service.html
@@ -50,7 +50,7 @@ body {
 <div class="topnav">
   <a href="index.html">Home</a>
   <a class="active" href="service.html">Our service</a>
-  <a href="Contact.html">Contact</a>
+  <a href="contact.html">Contact</a>
   <a href="about us.html">About</a>
 
 </div>
