--- a/JAYEE UNIVERSITY COLLEGE/index.html
+++ b/JAYEE UNIVERSITY COLLEGE/index.html
@@ -27,19 +27,23 @@
 								<ul>
 									<li><a href="left-sidebar.html">Overview</a></li>
 									<li><a href="right-sidebar.html">Faculties</a></li>
-									<li><a href="no-sidebar.html">Programmes</a></li>
 									<li><a href="no-sidebar.html">Courses</a></li>
+									<li><a href="no-sidebar.html">Faculty of Comm. Science</a></li>
 									<li>
-										<a href="#">Programmes</a>
+										<a href="#">Bachelor of Business Admin</a>
+
 										<ul>
 											<li><a href="#">Accounting</a></li>
 											<li><a href="#">Marketing</a></li>
 											<li><a href="#">Human Resources</a></li>
 											<li><a href="#">Public Relations</a></li>
+											<li><a href="#">Secretaryship & Management</a></li>
+											<li><a href="#">Fees</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
+							<li><a href="no-sidebar.html">Admission</a></li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button primary">Login</a></li>
 						</ul>
@@ -90,7 +94,7 @@
 						<header>
 							<p>Jayee got affiliated to the University of Education, Winneba in 2004 and re-named as Jayee Institute.</p>
 						</header>
-						<p>The Institute was accredited by the National Accreditation Board to run a 3-year Advanced Diploma in Journalism (with options in Sports Reporting, Political Reporting, Environmental Reporting, and Economic Reporting) and Business Administration (with options in Accounting, Secretaryship and Management, Public Relations and Marketing). There is a 2-year Non-Tertiary Diploma in Office Management and Secretaryship. Since then Jayee’s academic affairs have been monitored by her mentor, the University of Education, Winneba. In 2008, the National Accreditation Board re-accredited Jayee to run 4-year degree programmes.</p>
+						<p>The Institute was accredited by the National Accreditation Board to run a 3-year Advanced Diploma in Journalism and Business Administration. There is a 2-year Non-Tertiary Diploma in Office Management and Secretaryship. Since then Jayee’s academic affairs have been monitored by her mentor, the University of Education, Winneba. In 2008, the National Accreditation Board re-accredited Jayee to run 4-year degree programmes.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -103,16 +107,14 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>The Symbol </h2>
-							 
-								
+							<h2>The Symbol </h2>	
 						</header>
-						<p>Red: Success in academic life covers through hard work, commitment and toil of our students and staff.<br/>
+						     <p>Red: Success in academic life covers through hard work, commitment and toil of our students and staff.<br/>
 							    White: strive for unblemished academic, moral, and intellectual integrity.<br/>
 						        Beige: Indicating piety which signifies a strong belief in spiritual growth.<br/>
 							    The book stands for the pursuit of knowledge and academic excellence. <br/> 
-							    The computer stands for the role of innovative technologies that meet the demands of the ever changing global environment. <br/> 
-						        The mast highlights the importance of prompt, effective, and efficient communication to the satisfaction of the aspirations of all stakeholders.</p>
+							    The computer stands for the role of innovative technologies that meet the demands of the ever changing global environment.
+						      </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
