--- a/JAYEE UNIVERSITY COLLEGE/index.html
+++ b/JAYEE UNIVERSITY COLLEGE/index.html
@@ -28,6 +28,7 @@
 									<li><a href="left-sidebar.html">Overview</a></li>
 									<li><a href="right-sidebar.html">Faculties</a></li>
 									<li><a href="no-sidebar.html">Courses</a></li>
+									<li><a href="elements.html">Fees</a></li>
 									<li><a href="no-sidebar.html">Faculty of Comm. Science</a></li>
 									<li>
 										<a href="#">Bachelor of Business Admin</a>
@@ -38,7 +39,7 @@
 											<li><a href="#">Human Resources</a></li>
 											<li><a href="#">Public Relations</a></li>
 											<li><a href="#">Secretaryship & Management</a></li>
-											<li><a href="#">Fees</a></li>
+
 										</ul>
 									</li>
 								</ul>
