--- a/JAYEE UNIVERSITY COLLEGE/index.html
+++ b/JAYEE UNIVERSITY COLLEGE/index.html
@@ -194,7 +194,7 @@
 						<li><a href="https://www.gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://www.linkedin.com/in/martin-defor/">WEBWEAVER</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://www.linkedin.com/in/martin-defor/">MARTIN DEFOR</a></li>
 					</ul>
 				</footer>
 
