--- a/JAYEE UNIVERSITY COLLEGE/index.html
+++ b/JAYEE UNIVERSITY COLLEGE/index.html
@@ -25,28 +25,28 @@
 							<li>
 								<a href="#">Academics</a>
 								<ul>
-									<li><a href="left-sidebar.html">Overview</a></li>
-									<li><a href="right-sidebar.html">Faculties</a></li>
-									<li><a href="no-sidebar.html">Courses</a></li>
-									<li><a href="elements.html">Fees</a></li>
-									<li><a href="no-sidebar.html">Faculty of Comm. Science</a></li>
+									<li><a href="overview.html">Overview</a></li>
+									<li><a href="faculties.html">Faculties</a></li>
+									<li><a href="courses.html">Courses</a></li>
+									<li><a href="fees.html">Fees</a></li>
+									<li><a href="courses.html">School of Comm. Science</a></li>
 									<li>
-										<a href="#">Bachelor of Business Admin</a>
+										<a href="#">School of Business</a>
 
 										<ul>
-											<li><a href="#">Accounting</a></li>
-											<li><a href="#">Marketing</a></li>
-											<li><a href="#">Human Resources</a></li>
-											<li><a href="#">Public Relations</a></li>
-											<li><a href="#">Secretaryship & Management</a></li>
-
-										</ul>
+											<li><a href="#">BBA. Accounting</a></li>
+											<li><a href="#">BBA. Marketing</a></li>
+											<li><a href="#">BBA. Human Resources</a></li>
+											<li><a href="#">BBA. Public Relations</a></li>
+											<li><a href="#">BBA. Secretaryship & Mgt</a></li>
+                                        </ul>
 									</li>
 								</ul>
-							</li>
-							<li><a href="no-sidebar.html">Admission</a></li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Login</a></li>
+							 </li>
+							 <li><a href="admissions.html">Admissions</a></li>   
+							 <li><a href="news.html">News</a></li>
+							 <li><a href="alumni.html">Alumni</a></li>
+							 <li><a href="#" class="button primary">Login</a></li>
 						</ul>
 					</nav>
 				</header>
