--- a/zendnu/index.html
+++ b/zendnu/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Zendnu</title>
+		<title>Postven</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Zendnu</h1>
+				<h1>Postven</h1>
 				<p>Oder anything at anytime. We've got you covered.<br />
 				Coming to you soon. Sign up below for updates.</p>
 			</header>
@@ -34,7 +34,7 @@
 					<li><a href="https://www.gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Zendnu.</li>
+					<li>&copy; Postven.</li>
 				</ul>
 			</footer>
 
